[package]
name = "cargo-ipa"
description = "Compile Rust projects into .ipa files"
authors = ["The Loki Authors"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loki-chat/cargo-ipa"

[dependencies]
cargo = "0.69.1"
clap = { version = "4.2.1", features = ["derive"] }
toml = "0.7.3"
