[package]
name = "cargo-ipa"
description = "Compile Rust projects into .ipa files"
authors = ["The Loki Authors"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loki-chat/cargo-ipa"

[lib]
name = "cargo_ipa"
path = "src/lib.rs"
required-features = ["library"]

[[bin]]
name = "cargo-ipa"
path = "src/main.rs"
required-features = ["binary"]

[dependencies]
toml = "0.7.3"
# Only needed for the cargo-ipa CLI
clap = { version = "4.2.1", features = ["derive"], optional = true }
# Only needed for swift-bridge integration
swift-bridge = { version = "0.1", optional = true }
swift-bridge-build = { version = "0.1", optional = true }

[features]
default = []
# Enables integration with swift-bridge
swift-bridge = ["dep:swift-bridge", "dep:swift-bridge-build"]
# Dependencies only needed for the cargo_ipa library
library = []
# Dependencies only needed for the cargo-ipa CLI
binary = ["dep:clap"]
